# typed-requests

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup-pre-commit.sh
.github/workflows/: ci.yml  dependency-review.yml  pypi-publish.yml  security.yml
examples/: README.md  advanced_api_integration.py  api_response_validation.py  basic_usage.py  e_commerce_api_client.py
src/requests/: core.py  logger.py  tls.py  validation.py
src/typed_requests/: core.py  logger.py
tests/: test_core.py  test_examples.py  test_typed_networking.py
